added models index and index updating functionality

--- a/tests/data/models/m1.tex
+++ b/tests/data/models/m1.tex
@@ -1,3 +1,4 @@
 \begin{document}
 This yet another non-functional document for test-purposes that connects quantitites q1 and q2.
+The former is also known as q_1 and the latter as q_2.
 \end{document}
