added function for opening files

--- a/Widget-Sandbox.ipynb
+++ b/Widget-Sandbox.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import VBox, HBox, Dropdown, Label, Layout, Text, Accordion, SelectMultiple"
+    "from ipywidgets import VBox, HBox, Dropdown, Label, Layout, Text, Accordion, SelectMultiple, Button, Select"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,45 +47,68 @@
     "#edit keyword properties\n",
     "keyword_edit_box = VBox()\n",
     "keyword_name = Text(style=style, description=\"Name for display:\")\n",
-    "select_files = SelectMultiple()\n",
+    "select_files = Select()\n",
+    "file_open_button = Button(description=\"Open file\", disabled=True)\n",
+    "file_add_button = Button(description=\"Add file\")\n",
+    "file_box = HBox((select_files, VBox((file_open_button, \n",
+    "                                     file_add_button))))\n",
+    "\n",
+    "\n",
     "select_synonyms = SelectMultiple()\n",
-    "acc = Accordion(children=(select_files, select_synonyms))\n",
-    "acc.set_title(0, \"Files\")\n",
-    "acc.set_title(1, \"Synonyms\")\n",
+    "keyword_acc = Accordion(children=(file_box, select_synonyms), selected_index=None)\n",
+    "keyword_acc.set_title(0, \"Files\")\n",
+    "keyword_acc.set_title(1, \"Synonyms\")\n",
     "\n",
     "\n",
     "\n",
     "label = Label(value=select_keyword.value)\n",
     "edit_keyword_info = widgets.VBox([select_keyword, keyword_edit_box])\n",
-    "def keyword_selected(change):\n",
-    "    keyword_edit_box.children = (keyword_name, acc)  \n",
-    "    acc.selected_index = None\n",
-    "    keyword_name.value = change.new\n",
-    "\n",
-    "select_keyword.observe(keyword_selected, \"value\")"
+    "def on_keyword_selected(change):\n",
+    "    keyword_edit_box.children = (keyword_name, keyword_acc) \n",
+    "    keyword_info = quantities.keyword_info(change.new)\n",
+    "    select_files.options = keyword_info[\"files\"]\n",
+    "    select_files.index=None\n",
+    "    file_open_button.disabled = True\n",
+    "    select_synonyms.options = keyword_info[\"synonyms\"]\n",
+    "    categories = keyword_info[\"categories\"]\n",
+    "    keyword_acc.selected_index = None\n",
+    "    if \"name\" in keyword_info:\n",
+    "        keyword_name.value = keyword_info[\"name\"]\n",
+    "    else:\n",
+    "        keyword_name.value = change.new\n",
+    "        \n",
+    "def on_file_selected(change):\n",
+    "    file_open_button.disabled=False\n",
+    "    \n",
+    "def on_file_open_button_clicked(b):\n",
+    "    io.startfile(os.path.join(quantities.basedir, select_files.value))\n",
+    "#     io.startfile(select_files.value)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "file_open_button.on_click(on_file_open_button_clicked)\n",
+    "select_keyword.observe(on_keyword_selected, \"value\")\n",
+    "select_files.observe(on_file_selected, type=\"change\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_keyword_info(index, keyword):\n",
-    "    file_list = index[keyword][\"files\"]\n",
-    "    \n",
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afb2b12b605b45a0869516d295ea91f1",
+       "model_id": "df1111084f69403da1bba5c79f1193e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +129,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "select_keyword.observe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.startfile"
+   ]
   }
  ],
  "metadata": {
