objectified keyword editing gui

--- a/Widget-Sandbox.ipynb
+++ b/Widget-Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Select(options=('quantities\\\\neurobiology\\\\g-ratio.pdf', 'quantities\\\\neurobiology\\\\g-ratio.tex'), value='quantities\\\\neurobiology\\\\g-ratio.pdf'),\n",
+       " VBox(children=(Button(description='Open file', style=ButtonStyle()), Button(description='Add file', style=ButtonStyle()))))"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_box.children"
+   ]
   },
   {
    "cell_type": "code",
@@ -150,6 +164,79 @@
    "source": [
     "os.startfile"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from knowviz import gui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db1a110539ca41a8babf8bbdb7b31d0a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Dropdown(description='Select keyword:', options=('bound-proton-fraction', 'MR_g-ratio', 'myelin…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "gui.keyword_info_gui(quantities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from knowviz.gui import edit_keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd872fa8577840d2a030a04a38af8a81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "EditKeywordTab(children=(KeywordDropdown(description='Select keyword:', options=('bound-proton-fraction', 'MR_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "edit_keyword.EditKeywordTab(quantities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
